--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: 安装依赖包
         run: |
-          pip install curl_cffi requests
+          pip install curl_cffi requests pynacl
 
       - name: 运行签到脚本
         env:
