--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,10 +28,10 @@ jobs:
       - name: 安装依赖包
         run: |
           pip install curl_cffi requests pynacl
-      - name: 拉起本地docker
-        run: |
-          sudo docker run -itd   --name cloudflyer   -p 127.0.0.1:3000:3000   --restart unless-stopped   jackzzs/cloudflyer -K qaq123 -H 0.0.0.0
-          sleep 10s
+      #- name: 拉起本地docker
+        #run: |
+          #sudo docker run -itd   --name cloudflyer   -p 127.0.0.1:3000:3000   --restart unless-stopped   jackzzs/cloudflyer -K qaq123 -H 0.0.0.0
+          #sleep 10s
       
       - name: 运行签到脚本
         env:
